// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard reducer should handle DASHBOARD_CHANGE_BOOL 1`] = `
Object {
  "bool": true,
}
`;

exports[`Dashboard reducer should return the initial state 1`] = `
Object {
  "bool": false,
}
`;
